# covid-19-bot

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
cogs/: Test.py
covid_bot/: __main__.py  const.py
covid_bot/cogs/: help.py  stats.py
covid_bot/utils/: codes.py  formatting.py  graphing.py  help.py  time.py
test/: conftest.py  test_datasource.py
test/test_cogs/: test_stats.py
